[tool.poetry]
name = "pakkio"
version = "0.1.0"
description = ""
authors = ["pakkio <claudio.pacchiega@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
pyparsing = "^3.2.3"
flask = "^3.1.1"
antlr4-python3-runtime = "4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
